# learning-zephyr

./: .gitignore  README.md
001-vscode-settings/: .gitignore  README.md
001-vscode-settings/cmakepresets-json/: CMakeLists.txt  CMakePresets.json  prj.conf
001-vscode-settings/cmakepresets-json/boards/: blackpill_f411ce.conf  blackpill_f411ce.overlay
001-vscode-settings/cmakepresets-json/src/: main.c
001-vscode-settings/code-workspace/: CMakeLists.txt  CMakePresets.json  code-workspace.code-workspace  prj.conf
001-vscode-settings/code-workspace/boards/: blackpill_f411ce.overlay
001-vscode-settings/code-workspace/src/: CMakeLists.txt  main.c
001-vscode-settings/settings-json/: CMakeLists.txt  prj.conf
001-vscode-settings/settings-json/boards/: blackpill_f411ce.overlay
001-vscode-settings/settings-json/src/: main.c
